--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,74 +1,80 @@
 @font-face {
-    font-family: "Roboto";
-    src: url(https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap);
+  font-family: "Roboto";
+  src: url(https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap);
 }
 
 body{
-    font-family: 'Roboto';
+  font-family: 'Roboto';
 }
 
-  .quote-section {
-    background: var(--color-quote-bg);
-    padding: 25px;
-    border-radius: 10px;
-  }
-  
-  .quote {
-    color: var(--color-quote-text);
-    margin-right: 450px;
-    margin-left: 450px;
-    font-style: italic;
-    line-height: 1.5;
-  }
-  
-  .author {
-    font-weight: bold;
-    text-align: right;
-    margin-right: 450px;
-    font-size: small;
-  }
+.quote-section {
+  background: var(--color-quote-bg);
+  padding: 100px;
+  border-radius: 10px;
+}
+.quote-container {
+  display: flex;
+  justify-content: center;
+}
 
-  .call-to-action {
-    background: var(--color-button);
-    padding: 35px;
-    margin-left: 200px;
-    margin-right: 200px;
-    border-radius: 10px;
-    width: 900px;
-    line-height: 0.5;
-    color: #e0e0de;
-  }
+.quote {
+  color: var(--color-quote-text);
+  font-size: var(--font-size-quote-text);
+  font-style: italic;
+  line-height: 1.5;
+}
+  
+.author {
+  font-weight: bold;
+  text-align: right;
+  margin-right: 450px;
+  font-size: small;
+}
+.log-container {
+  display: flex;
+  justify-content: center;
+}
+
+.call-to-action {
+  background: var(--color-button);
+  padding: 35px;
+  border-radius: 10px;
+  width: 900px;
+  line-height: 0.5;
+  color: #e0e0de;
+}
  
-  .call-to-action h2 {
-    font-size: 20px;
-    color: white;
-    margin: 0;
-  }
+.call-to-action h2 {
+  font-size: 20px;
+  color: white;
+  margin: 0;
+}
   
-  .call-to-acation p {
-    font-size: 16px;
-    margin-bottom: 20px;
-  }
+.call-to-action p{
+  font-size: 16px;
+  margin-top: 15px;
+  margin-bottom: 20px;
+}
 
-  .sign-up-btn {
-    background: var(--color-button);
-    border: 2px solid white;
-    border-radius: 5px;
-    padding: 10px 20px;
-    cursor: pointer;
-    color: white;
-  }
+.sign-up-btn {
+  background: var(--color-button);
+  border: 2px solid white;
+  border-radius: 5px;
+  padding: 10px 20px;
+  cursor: pointer;
+  color: white;
+}
   
-  .sign-up-btn:hover {
-    background-color: white;
-    color: black;
-    border-color: #007bff;
-  }
+.sign-up-btn:hover {
+  background-color: white;
+  color: black;
+  border-color: #007bff;
+}
 
-  .sign-up-btn a {
-    text-decoration: none;
-    color: white;
-  }
+.sign-up-btn a {
+  text-decoration: none;
+  color: white;
+}
 
 footer{
   background: var(--color-background-dark);
