--- a/styles/about.css
+++ b/styles/about.css
@@ -12,14 +12,16 @@ ul {
 }
 .header-about_container {
     background-color: var(--color-background-dark);
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-end;
+    padding: 1% 11%;
 }
 .header-about-content_container {
     display: flex;
-    align-items: center;
-    justify-content: space-around;
-    height: 9vh;
-    padding-left: 10px;
-    padding-right: 10px;
+    align-items: flex-start;
+    justify-content: flex-end;
+    width: 100%;
 }
 
 .header-nav-links-container a:hover {
@@ -28,6 +30,7 @@ ul {
 .about-title {
     text-align: center;
     color:  var(--color-text-hero-main);
+    margin-right: auto;
    
 }
 .header-nav-links-container {
@@ -87,7 +90,6 @@ a.header-nav_about, .header-nav_menu, .header-nav_home{
 
 @media (max-width: 480px) {
     .header-about-content_container {
-        flex-direction: column;
         height: auto;
         padding: 5px;
     }
