--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,68 +1,96 @@
-@font-face {
-    font-family: "Roboto";
-    src: url(https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap);
-}
 
-body{
+  body{
     font-family: 'Roboto';
-}
+  }
 
   .quote-section {
     background: var(--color-quote-bg);
     padding: 25px;
-    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-items: center;
   }
-  
+  .quote-section_container {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 8% 0%;
+  }
   .quote {
     color: var(--color-quote-text);
-    margin-right: 450px;
-    margin-left: 450px;
     font-style: italic;
-    line-height: 1.5;
+    font-size: var(--font-size-quote-text);
+    font-weight: var(--font-weight-light-italic);
   }
   
   .author {
-    font-weight: bold;
-    text-align: right;
-    margin-right: 450px;
-    font-size: small;
+    font-weight: var(--font-weight-extra-bold);
+    margin-left: auto;
   }
 
   .call-to-action {
-    background: var(--color-button);
-    padding: 35px;
-    margin-left: 200px;
-    margin-right: 200px;
-    border-radius: 10px;
-    width: 900px;
-    line-height: 0.5;
-    color: #e0e0de;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: var(--color-text-hero-main);
+    margin: 7% 0%;
   }
- 
+  .call-to-action_container {
+    background: var(--color-button);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 74%;
+    height: 26vh;
+    border-radius: 5px;
+  }
+  .call-to-action-content_container {
+    display: flex;
+    justify-content: space-between;
+    align-content: space-between;
+    width: 87%;
+  }
+  .div-content-extra_container {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+   
+    flex-wrap: wrap;
+  }
   .call-to-action h2 {
     font-size: 20px;
-    color: white;
+    color: var(--color-text-hero-main);
     margin: 0;
   }
   
-  .call-to-acation p {
-    font-size: 16px;
-    margin-bottom: 20px;
+  .sign-up-p {
+    font-weight: 200;
   }
-
+  .sign-up-btn_container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+  
   .sign-up-btn {
-    background: var(--color-button);
-    border: 2px solid white;
+    margin-left: auto;
+    height: 29px;
+    width: 118px;
+    background-color: var( --color-button);
+    color: var(--color-text-hero-main);
     border-radius: 5px;
-    padding: 10px 20px;
     cursor: pointer;
-    color: white;
+    border: 2px solid var(--color-text-hero-main);
   }
   
   .sign-up-btn:hover {
-    background-color: white;
-    color: black;
-    border-color: #007bff;
+    background-color: var( --color-background-dark);
   }
 
   .sign-up-btn a {
@@ -70,11 +98,25 @@ body{
     color: white;
   }
 
-footer{
-  background: var(--color-background-dark);
-  height:80px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: white;
-}
+  footer{
+    background: var(--color-background-dark);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    height: 8vh;
+  }
+
+  @media (max-width: 768px) {
+    p.quote {
+      font-size: 1em;
+    }
+  }
+
+  @media (max-width: 480px) {
+     p.quote {
+      font-size: 0.9em;
+     }
+  }
+
+  
