--- a/styles/styles-header.css
+++ b/styles/styles-header.css
@@ -23,8 +23,8 @@ ul {
 
 .header-nav_container {
     display: flex;
+    align-items: flex-start;
     justify-content: flex-end;
-    padding-bottom: 20px;
     max-width: 1200px;
 }
 .header-nav-logo_container {
@@ -105,6 +105,8 @@ p.hero-paragraph {
     flex-direction: column;
     align-items: center; 
     padding: 2% 11%;
+    margin-top: 1%;
+    margin-bottom: 9%;
     gap: 20px; 
 }
 
@@ -145,6 +147,11 @@ p.hero-paragraph {
     margin-top: 3%;
 }
 
+@media (max-width: 1104px) {
+    .hero-title {
+        font-size: 3em;
+    }
+}
 @media (max-width: 883px) {
     .header-container {
       height: 0;
@@ -157,6 +164,7 @@ p.hero-paragraph {
     }
     p.hero-paragraph {
         margin-bottom: 2%;
+        text-align: justify;
     }
 }
 
@@ -202,9 +210,6 @@ p.hero-paragraph {
 
 
 @media (max-width: 480px) { 
-    .header-container { 
-        padding: 3% 5%; 
-    } 
     .header-nav_logo {
          font-size: 13px; 
     } 
@@ -237,5 +242,5 @@ p.hero-paragraph {
     .random-information_p {
         font-size: 0.9em;
     }
-  
+
 }
