--- a/styles/styles-header.css
+++ b/styles/styles-header.css
@@ -13,7 +13,7 @@ ul {
 
 .header-container {
     background-color: var(--color-background-dark);
-    padding: 1% 11%;
+    padding: 1% 13%;
     height: auto;
 } 
 .hero-main-container {
@@ -25,6 +25,7 @@ ul {
     display: flex;
     align-items: flex-start;
     justify-content: flex-end;
+   /*padding: 1% 8%;*/
 }
 .header-nav-logo_container {
     display: flex;
@@ -63,6 +64,7 @@ a.header-nav_about, .header-nav_menu, .header-nav_home{
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    width: 40%;
 }
 
 .hero-title {
@@ -115,13 +117,15 @@ p.hero-paragraph {
 }
 .random-info-wrap-container {
     display: flex;
-    justify-content: space-between; 
-    flex-wrap: wrap;
+    /*justify-content: space-between;*/ 
+    /*flex-wrap: wrap;*/
     width: 100%;
-    max-width: 1200px; 
+    justify-content: center;
+    gap: 41px;
+    /*max-width: 1200px;*/ 
 }
 .article-randominformation-main_container {
-    max-width: calc(20% - 4px); 
+    max-width: calc(18% - 4px); 
     display: flex;
     flex-direction: column;
     align-items: center;
